[package]
name = "rust-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
tokio-websockets = { version = "0.7.0", features = ["client", "server", "fastrand", "openssl"] }
http = "1.1.0"
futures-util = { version = "0.3.30", features = ["sink"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }