[package]
name = "rust-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
tokio-websockets = { version = "0.8.2", features = ["client", "server", "fastrand", "openssl"] }
tokio-utils = "0.1.2"
http = "1.1.0"
futures-util = { version = "0.3.30", features = ["sink"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
serde_json = "1.0"
httparse = "1.8.0"
url = "2.5.0"